# haskfem

./: LICENSE  README.md  TODO.md  haskfem.cabal  stack.yaml
app/: Main.hs
doc/: plot_libs.md  specification-0.1.0.md  specification-0.2.0.md  specification.md
src/: Grid.hs  Haskfem.hs  HaskfemInternal.hs
test/: HaskfemSpec.hs  Spec.hs  doctests.hs
