name:                haskfem
version:             0.1.0.0
synopsis:            1D finite element method in Haskell
description:         Please see README.md
homepage:            https://github.com/bschwb/haskfem#readme
license:             BSD3
license-file:        LICENSE
author:              Bernd Schwarzenbacher
maintainer:          bernd.schwb@yahoo.com
copyright:           2016 Bernd Schwarzenbacher
category:            Math, FEM
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Haskfem
                     , HaskfemInternal
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
  default-language:    Haskell2010

executable haskfem
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskfem
                     , easyplot
  default-language:    Haskell2010

test-suite haskfem-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HaskfemSpec
  build-depends:       base
                     , haskfem
                     , hspec >= 1.3
                     , QuickCheck >= 2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctests.hs
  build-depends:       base >= 4.7 && < 5
                     , haskfem
                     , Glob >= 0.7
                     , QuickCheck >= 2
                     , doctest >= 0.9.12
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bschwb/haskfem
